# rust-grpc-sample

./: .editorconfig  .gitignore  Cargo.toml  build.rs  generate-crt.sh  openssl-memo.txt  root.key
assets/: index.txt  index.txt.old  openssl.cnf  root.crt  root.csr  root.key  server.crt  server.csr  server.der  server.key  server.p12
assets/newcerts/: 01.pem
protobuf/: hello_rpc.proto  hello_stream.proto  hello_stream_response.proto
protobuf/rust_grpc_sample/api/: hello_rpc.proto  hello_stream.proto
protobuf/rust_grpc_sample/entity/: entity.proto
src/: asset.rs  grpc_stub.rs  lib.rs  prelude.rs
src/grpc_stub/: empty.rs  hello_rpc.rs  hello_rpc_grpc.rs  hello_stream_response.rs  hello_stream_response_grpc.rs  rust_grpc_sample.hello_stream.rs  rust_grpc_sample.rs  rust_grpc_sample_hello_rpc.rs
src/grpc_stub/rust_grpc_sample/: api.rs  entity.rs
